# game-programming-in-cpp

./: .gitignore  CMakeLists.txt  Game.cpp  Game.h  README.md  main.cpp
src/: Actor.cpp  Actor.h  AnimSpriteComponent.cpp  AnimSpriteComponent.h  BGSpriteComponent.cpp  BGSpriteComponent.h  CMakeLists.txt  Component.cpp  Component.h  Game.cpp  Game.h  Math.cpp  Math.h  Ship.cpp  Ship.h  SpriteComponent.cpp  SpriteComponent.h  main.cpp
